new test notebooks

--- a/notebooks/data_proc.ipynb
+++ b/notebooks/data_proc.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T17:34:38.537121Z",
-     "start_time": "2019-11-15T17:34:38.206033Z"
+     "end_time": "2019-12-03T08:19:03.770404Z",
+     "start_time": "2019-12-03T08:19:03.256484Z"
     }
    },
    "outputs": [],
@@ -30,6 +30,62 @@
     "import numpy as np\n",
     "import datetime as dt\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-03T08:19:04.519156Z",
+     "start_time": "2019-12-03T08:19:04.504581Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:95% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:95% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-03T08:19:14.398048Z",
+     "start_time": "2019-12-03T08:19:14.392920Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style> .CodeMirror pre { font-size: 120% !important; } </style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%HTML\n",
+    "<style> .CodeMirror pre { font-size: 120% !important; } </style>"
    ]
   },
   {
@@ -146,18 +202,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T17:36:18.924852Z",
-     "start_time": "2019-11-15T17:36:18.858893Z"
+     "end_time": "2019-12-03T08:24:07.727459Z",
+     "start_time": "2019-12-03T08:24:07.690520Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['------------ Data File Created By ActiGraph GT3XPlus ActiLife v6.13.3 Firmware v2.5.0 date format M/d/yyyy Filter Normal Multiple Incline Limb: Undefined -----------',\n",
+       " 'Serial Number: CLE1B36130030',\n",
+       " 'Start Time 09:00:00',\n",
+       " 'Start Date 7/4/2016',\n",
+       " 'Epoch Period (hh:mm:ss) 00:00:10',\n",
+       " 'Download Time 15:21:04',\n",
+       " 'Download Date 7/13/2016',\n",
+       " 'Current Memory Address: 0',\n",
+       " 'Current Battery Voltage: 406     Mode = 13',\n",
+       " '--------------------------------------------------',\n",
+       " '0,0,0,0,0']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read accelerometer data\n",
     "\n",
-    "path = work_dir + acc + file_acc\n",
+    "# path = work_dir + acc + file_acc\n",
+    "\n",
+    "path = \"../corrections/Errors-Habitus/input-habitus/PP001_actigraph_10.csv\" #######\n",
     "\n",
     "acc_list = [line.rstrip('\\n') for line in open(path)]\n",
     "\n",
@@ -166,14 +245,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T17:36:21.217941Z",
-     "start_time": "2019-11-15T17:36:21.211771Z"
+     "end_time": "2019-12-03T08:24:18.049061Z",
+     "start_time": "2019-12-03T08:24:18.040787Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start time: 09:00:00\n",
+      "start date: 7/4/2016\n",
+      "time interval: 00:00:10\n",
+      "end time: 15:21:04\n",
+      "end date: 7/13/2016\n"
+     ]
+    }
+   ],
    "source": [
     "# print metadata\n",
     "\n",
@@ -191,14 +282,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T17:36:23.137590Z",
-     "start_time": "2019-11-15T17:36:23.116888Z"
+     "end_time": "2019-12-03T08:24:21.048051Z",
+     "start_time": "2019-12-03T08:24:21.031596Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start timestamp: 2016-04-07 09:00:00\n",
+      "end timestamp: 2016-07-13 15:21:04\n",
+      "interval in sec: 10.0\n",
+      "number of acc. events: 80046\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    start_timestamp = dt.datetime.strptime(start_date + \" \" + start_time, '%d/%m/%Y %H:%M:%S')\n",
@@ -238,14 +340,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-11-15T17:36:24.980625Z",
-     "start_time": "2019-11-15T17:36:24.816837Z"
+     "end_time": "2019-12-03T08:24:50.582943Z",
+     "start_time": "2019-12-03T08:24:50.441185Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATETIME</th>\n",
+       "      <th>ACC DATA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-04-07 09:00:00</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-04-07 09:00:10</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-04-07 09:00:20</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-04-07 09:00:30</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-04-07 09:00:40</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2016-04-07 09:00:50</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2016-04-07 09:01:00</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2016-04-07 09:01:10</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2016-04-07 09:01:20</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2016-04-07 09:01:30</td>\n",
+       "      <td>0,0,0,0,0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             DATETIME   ACC DATA\n",
+       "0 2016-04-07 09:00:00  0,0,0,0,0\n",
+       "1 2016-04-07 09:00:10  0,0,0,0,0\n",
+       "2 2016-04-07 09:00:20  0,0,0,0,0\n",
+       "3 2016-04-07 09:00:30  0,0,0,0,0\n",
+       "4 2016-04-07 09:00:40  0,0,0,0,0\n",
+       "5 2016-04-07 09:00:50  0,0,0,0,0\n",
+       "6 2016-04-07 09:01:00  0,0,0,0,0\n",
+       "7 2016-04-07 09:01:10  0,0,0,0,0\n",
+       "8 2016-04-07 09:01:20  0,0,0,0,0\n",
+       "9 2016-04-07 09:01:30  0,0,0,0,0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create accelerometer dataframe\n",
     "\n",
@@ -332,6 +533,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
