--- a/notebooks/data_proc_test.ipynb
+++ b/notebooks/data_proc_test.ipynb
@@ -3393,37 +3393,58 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Accelerometer data processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-03T14:38:49.011310Z",
-     "start_time": "2019-12-03T14:38:49.008750Z"
-    },
-    "hidden": true
+     "end_time": "2019-12-03T16:48:35.589820Z",
+     "start_time": "2019-12-03T16:48:35.586642Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "acc_path_raw = '/Users/molinaro/Documents/GITHUB/HABITUS/corrections/Errors-Habitus/Input-habitus/PP004_actigraph_60.csv'"
+    "70 // 15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-03T14:38:52.918203Z",
-     "start_time": "2019-12-03T14:38:50.441970Z"
-    },
-    "hidden": true
+     "end_time": "2019-12-03T16:44:31.093024Z",
+     "start_time": "2019-12-03T16:44:31.090141Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "acc_path_raw = '/Users/molinaro/Documents/GITHUB/HABITUS/corrections/Errors-Habitus/Input-habitus/PP004_actigraph_10.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-03T16:44:31.657720Z",
+     "start_time": "2019-12-03T16:44:31.485155Z"
+    }
    },
    "outputs": [
     {
@@ -3432,7 +3453,7 @@
        "DataFrame[value: string]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3445,22 +3466,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-03T14:38:54.440250Z",
-     "start_time": "2019-12-03T14:38:54.108762Z"
-    },
-    "hidden": true
+     "end_time": "2019-12-03T16:44:32.165041Z",
+     "start_time": "2019-12-03T16:44:32.125771Z"
+    }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10090"
+       "60490"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3471,13 +3491,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-03T14:38:58.647728Z",
-     "start_time": "2019-12-03T14:38:57.990423Z"
-    },
-    "hidden": true
+     "end_time": "2019-12-03T16:44:32.972132Z",
+     "start_time": "2019-12-03T16:44:32.765629Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -3486,13 +3505,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-03T14:39:00.032597Z",
-     "start_time": "2019-12-03T14:39:00.027202Z"
-    },
-    "hidden": true
+     "end_time": "2019-12-03T16:44:33.184629Z",
+     "start_time": "2019-12-03T16:44:33.180436Z"
+    }
    },
    "outputs": [
     {
@@ -3512,13 +3530,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-03T14:39:02.157393Z",
-     "start_time": "2019-12-03T14:39:01.634974Z"
-    },
-    "hidden": true
+     "end_time": "2019-12-03T16:44:33.859708Z",
+     "start_time": "2019-12-03T16:44:33.688353Z"
+    }
    },
    "outputs": [
     {
@@ -3527,7 +3544,7 @@
        "DataFrame[timestamp: timestamp, axis1: int, axis2: int, axis3: int, steps: int, lux: int, incl_off: int, incl_standing: int, incl_sitting: int, incl_lying: int]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3541,13 +3558,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-03T14:39:05.351734Z",
-     "start_time": "2019-12-03T14:39:03.051892Z"
-    },
-    "hidden": true
+     "end_time": "2019-12-03T16:55:44.517223Z",
+     "start_time": "2019-12-03T16:55:43.988150Z"
+    }
    },
    "outputs": [
     {
@@ -3557,26 +3573,26 @@
       "+-------------------+-----+-----+-----+-----+----+--------+-------------+------------+----------+\n",
       "|timestamp          |axis1|axis2|axis3|steps|lux |incl_off|incl_standing|incl_sitting|incl_lying|\n",
       "+-------------------+-----+-----+-----+-----+----+--------+-------------+------------+----------+\n",
-      "|2016-12-01 15:00:00|355  |190  |176  |27   |439 |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:01:00|107  |30   |34   |5    |116 |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:02:00|507  |479  |569  |29   |900 |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:03:00|59   |20   |115  |25   |130 |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:04:00|102  |22   |88   |33   |136 |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:05:00|33   |16   |66   |25   |75  |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:06:00|36   |16   |93   |27   |101 |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:07:00|73   |19   |99   |27   |124 |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:08:00|192  |63   |68   |22   |213 |null    |null         |null        |null      |\n",
-      "|2016-12-01 15:09:00|2638 |1427 |1200 |81   |3230|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:10:00|4853 |1951 |2398 |122  |5753|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:11:00|4944 |1878 |2687 |122  |5932|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:12:00|4667 |1925 |2468 |123  |5619|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:13:00|5024 |2030 |2612 |124  |6015|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:14:00|4602 |1420 |2702 |129  |5522|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:15:00|4802 |702  |2729 |130  |5567|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:16:00|4835 |894  |2933 |128  |5725|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:17:00|4680 |1939 |3044 |127  |5910|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:18:00|4431 |69   |582  |131  |4469|null    |null         |null        |null      |\n",
-      "|2016-12-01 15:19:00|107  |120  |115  |6    |197 |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:00:00|266  |135  |118  |9    |82  |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:01:00|99   |20   |23   |2    |0   |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:02:00|451  |421  |510  |12   |0   |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:03:00|30   |0    |46   |2    |17  |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:04:00|58   |0    |43   |2    |3   |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:05:00|2    |0    |19   |0    |5   |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:06:00|11   |0    |56   |1    |10  |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:07:00|34   |0    |42   |1    |5   |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:08:00|175  |26   |23   |6    |22  |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:09:00|2546 |1263 |1060 |68   |0   |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:10:00|4760 |1788 |2230 |122  |836 |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:11:00|4858 |1705 |2541 |122  |952 |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:12:00|4569 |1735 |2298 |123  |951 |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:13:00|4943 |1841 |2456 |124  |923 |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:14:00|4508 |1230 |2528 |127  |1014|null    |null         |null        |null      |\n",
+      "|2016-12-01 15:15:00|4713 |493  |2583 |130  |882 |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:16:00|4742 |724  |2783 |127  |968 |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:17:00|4573 |1804 |2900 |127  |1029|null    |null         |null        |null      |\n",
+      "|2016-12-01 15:18:00|4343 |17   |233  |130  |749 |null    |null         |null        |null      |\n",
+      "|2016-12-01 15:19:00|101  |109  |103  |2    |68  |null    |null         |null        |null      |\n",
       "+-------------------+-----+-----+-----+-----+----+--------+-------------+------------+----------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -3594,13 +3610,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-03T14:39:23.138332Z",
      "start_time": "2019-12-03T14:39:22.234801Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3629,8 +3686,7 @@
     "ExecuteTime": {
      "end_time": "2019-12-03T14:39:28.549379Z",
      "start_time": "2019-12-03T14:39:28.545740Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3656,8 +3712,7 @@
     "ExecuteTime": {
      "end_time": "2019-12-03T14:39:31.717446Z",
      "start_time": "2019-12-03T14:39:31.607787Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3704,8 +3759,7 @@
     "ExecuteTime": {
      "end_time": "2019-12-03T14:33:10.449853Z",
      "start_time": "2019-12-03T14:33:01.766840Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3741,8 +3795,7 @@
     "ExecuteTime": {
      "end_time": "2019-12-03T14:33:25.580246Z",
      "start_time": "2019-12-03T14:33:11.401532Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3781,8 +3834,7 @@
     "ExecuteTime": {
      "end_time": "2019-12-03T14:33:25.619669Z",
      "start_time": "2019-12-03T14:33:21.689Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -3796,8 +3848,7 @@
     "ExecuteTime": {
      "end_time": "2019-12-03T14:33:45.296369Z",
      "start_time": "2019-12-03T14:33:26.505198Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -3837,7 +3888,6 @@
      "end_time": "2019-12-03T14:34:09.138847Z",
      "start_time": "2019-12-03T14:34:06.479308Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -3926,7 +3976,6 @@
      "end_time": "2019-12-03T10:07:25.425230Z",
      "start_time": "2019-12-03T10:05:51.088738Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -4014,8 +4063,7 @@
     "ExecuteTime": {
      "end_time": "2019-12-03T09:21:02.495153Z",
      "start_time": "2019-12-03T09:20:52.259609Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
