Automate building and testing (#10)
* add Makefile and integration tests

* update installation instructions

--- a/notebooks/data_proc.ipynb
+++ b/notebooks/data_proc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T20:45:32.232473Z",
@@ -33,18 +33,14 @@
     "# REFERENCE: https://spark.apache.org/docs/latest/configuration.html\n",
     "\n",
     "conf = SparkConf().setAll([('spark.memory.fraction', '0.6'),\n",
-    "                           ('spark.executor.memory', '32g'),\n",
-    "                           ('spark.driver.memory', '32g'),\n",
+    "                           ('spark.executor.memory', '16g'),\n",
+    "                           ('spark.driver.memory', '16g'),\n",
     "                           ('spark.sql.shuffle.partitions', '20'),\n",
     "                           ('spark.memory.offHeap.enabled', True),\n",
     "                           ('spark.memory.offHeap.size', '16g'),\n",
     "                           ('spark.cleaner.referenceTracking.cleanCheckpoints', True),\n",
     "                           ('spark.driver.host', '127.0.0.1'),\n",
     "                           ('spark.scheduler.listenerbus.eventqueue.capacity', '50000')]  # ,\n",
-    "                          # ('spark.driver.cores', '4'),\n",
-    "                          # ('spark.executor.cores', '4'),\n",
-    "                          # ('spark.worker.cleanup.enabled','true'),\n",
-    "                          # ('spark.sql.session.timeZone', 'UTC')])\n",
     "                          )\n",
     "\n",
     "spark = SparkSession.builder.config(conf=conf).master(\"local[*]\").appName(\"test\").getOrCreate()\n",
@@ -116,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T16:01:28.866865Z",
@@ -126,12 +122,12 @@
    },
    "outputs": [],
    "source": [
-    "gps_path_raw = '../test_data/gps/A01.csv'"
+    "gps_path_raw = '../tests/raw-data/gps/1.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T16:02:24.217769Z",
@@ -164,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T16:03:26.209712Z",
@@ -543,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T16:04:19.545352Z",
@@ -553,12 +549,12 @@
    },
    "outputs": [],
    "source": [
-    "# gps_data = gps_data.limit(1000)"
+    "gps_data = gps_data.limit(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T16:04:20.177318Z",
@@ -575,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T16:04:22.335371Z",
@@ -770,7 +766,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# gps_data3.toPandas().to_csv('A01_gpu_out_' + str(INTERVAL) + '.csv')"
+    "# gps_data3.toPandas().to_csv('1_gpu_out_' + str(INTERVAL) + '.csv')"
    ],
    "metadata": {
     "collapsed": false,
@@ -788,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T20:49:27.878241Z",
@@ -797,7 +793,7 @@
    },
    "outputs": [],
    "source": [
-    "acc_path_raw = '../test_data/acc/A01_5sec.csv'"
+    "acc_path_raw = '../tests/raw-data/acc/1.csv'"
    ]
   },
   {
@@ -807,6 +803,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T20:49:28.612208Z",
      "start_time": "2019-12-11T20:49:28.432552Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -823,6 +822,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T20:49:29.270988Z",
      "start_time": "2019-12-11T20:49:29.224999Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -832,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-12-11T20:49:30.509021Z",
@@ -853,6 +855,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T20:49:31.479991Z",
      "start_time": "2019-12-11T20:49:31.476172Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -867,6 +872,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T20:49:39.058016Z",
      "start_time": "2019-12-11T20:49:32.063566Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -884,6 +892,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T20:44:47.372516Z",
      "start_time": "2019-12-11T20:44:44.259871Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -903,6 +914,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T16:44:01.066214Z",
      "start_time": "2019-12-11T16:43:59.540307Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -921,6 +935,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T16:44:02.773808Z",
      "start_time": "2019-12-11T16:44:02.769840Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -935,6 +952,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T16:44:04.034802Z",
      "start_time": "2019-12-11T16:44:03.926288Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -949,6 +969,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T16:44:26.688604Z",
      "start_time": "2019-12-11T16:44:08.787158Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -974,6 +997,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T16:44:54.074171Z",
      "start_time": "2019-12-11T16:44:28.454517Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -1001,6 +1027,9 @@
     "ExecuteTime": {
      "end_time": "2019-12-11T16:45:57.920545Z",
      "start_time": "2019-12-11T16:45:02.876670Z"
+    },
+    "pycharm": {
+     "is_executing": true
     }
    },
    "outputs": [],
@@ -1029,7 +1058,10 @@
      "end_time": "2019-12-11T16:46:02.552766Z",
      "start_time": "2019-12-11T16:46:01.684906Z"
     },
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -1047,7 +1079,7 @@
    },
    "outputs": [],
    "source": [
-    "# acc_data_act.toPandas().to_csv('A01_acc_out_' + str(INTERVAL) + '.csv')"
+    "# acc_data_act.toPandas().to_csv('1_acc_out_' + str(INTERVAL) + '.csv')"
    ]
   },
   {
@@ -1153,7 +1185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merge_data2.toPandas().to_csv('A01_merged_out_' + str(INTERVAL) + '.csv')"
+    "# merge_data2.toPandas().to_csv('1_merged_out_' + str(INTERVAL) + '.csv')"
    ]
   }
  ],
